--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Beko'nun Blogu</title>
-
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <title>Beko'nun Statik Blogu</title>
 
     <style>
         body { 
@@ -62,6 +60,7 @@
             padding: 10px;
             overflow-x: auto;
             border-radius: 4px;
+            color: #d4d4d4;
         }
     </style>
 </head>
@@ -75,6 +74,8 @@
     <div id="blog-content">
         <p>Lütfen listeden bir yazı seçin.</p>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 
     <script src="blog.js"></script>
 </body>
