--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         justify-content: space-between;
         align-items: center;
         padding: 0 20px;
-        color: #FFFFFF; /* Modal Başlığı Beyaz Yapıldı */
+        color: #ffc45c; /* Modal Başlığı Beyaz Yapıldı */
     }
     
     /* İçerik Kutusu Stili */
