--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
 
     <main id="content-area">
         <section id="laboratuvar" class="page-content active-page">
-            <h1 style="display: inline-block;">SİMULASYON: Linux Masaüstü Klone</h1>
+            <div class="header-with-button">
+                <h1>SİMULASYON: Linux Masaüstü Klone</h1>
+                <button id="fullscreen-btn" onclick="enterFullScreen()">[ ] Tam Ekran Yap</button>
+            </div>
             
-            <button id="fullscreen-btn" onclick="enterFullScreen()">[ ] Tam Ekran Yap</button>
-
             <p><strong>Vizyon:</strong> Ana arayüz bozulmadan, Masaüstü Klone projesi aşağıdaki alanda bağımsız olarak çalışacaktır.</p>
 
             <iframe id="desktop-klone-iframe" src="pardus-klone.html" frameborder="0"></iframe>
